@@ -98,7 +98,7 @@ public:
     //! status of the operation
 
     virtual request_ptr aread(void* buffer, offset_type pos, size_type bytes,
-                              const completion_handler& on_cmpl) = 0;
+                              const completion_handler& on_cmpl = completion_handler()) = 0;
 
     //! Schedules an asynchronous write request to the file.
     //! \param buffer pointer to memory buffer to write from
@@ -108,7 +108,7 @@ public:
     //! \return \c request_ptr request object, which can be used to track the
     //! status of the operation
     virtual request_ptr awrite(void* buffer, offset_type pos, size_type bytes,
-                               const completion_handler& on_cmpl) = 0;
+                               const completion_handler& on_cmpl = completion_handler()) = 0;
 
     virtual void serve(void* buffer, offset_type offset, size_type bytes,
                        request::request_type type) = 0;
