@@ -13,6 +13,11 @@ Version 1.4-dev (unreleased)
   - adding stxxl::binary_buffer which can be used for compact serialization and
     reading via a stxxl::binary_reader cursor interface.
 
+  - removing struct default_completion_handler, using a NULL pointer in default
+    complete handler instead, since otherwise a default_completion_handler
+    objects is cloned for _each_io_request_! Using a NULL pointer avoids
+    superfluous new/delete work on the heap.
+
 Version 1.4.0 (12 December 2013)
 
 * Reorganized Directory Hierarchy
